complete methods for the API (in progress)

--- a/examples/login/views/account.ejs
+++ b/examples/login/views/account.ejs
@@ -4,7 +4,11 @@
 <p>Found: <%= user.FindCount %></p>
 <p>Hide: <%= user.HideCount %></p>
 <p>PublicGuid: <%= user.PublicGuid %></p>
-<p>AccessToken: <%= token %></p>
+<p>AccessToken (user): <%= token %></p>
+
+<p>AccessToken: <%= oauth.token %></p>
+<p>TokenSecret: <%= oauth.tokenSecret %></p>
+
 
 
     
