Rename to geocaching-api

--- a/examples/login/views/layout.ejs
+++ b/examples/login/views/layout.ejs
@@ -13,7 +13,7 @@
 			<p>
 			<a href="/">Home</a> | 
 			<a href="/account">Account</a> |
-			<a href="/test">Test</a> | 
+			<a href="/test">Test API</a> | 
 			<a href="/logout">Log Out</a>
 			</p>
 		<% } %>
