--- a/examples/login/views/test.ejs
+++ b/examples/login/views/test.ejs
@@ -1,3 +1,7 @@
+
+<div class="error"><%= error %></div>
+<hr/>
+
 <p>ID: <%= user.id %></p>
 <p>Username: <%= user.username %></p>
 <p>Avatar: </p><img src='<%= user.AvatarUrl %>'/></p>
@@ -5,10 +9,9 @@
 <p>Hide: <%= user.HideCount %></p>
 <p>PublicGuid: <%= user.PublicGuid %></p>
 <p>AccessToken: <%= token %></p>
-<hr/>
 
-<h1>Test1</h1>
-<p><%= tests.test1 %></p>
+<hr>
+<pre><%= data %></pre>
 
 
     
