add user in _verify callback

--- a/examples/login/views/account.ejs
+++ b/examples/login/views/account.ejs
@@ -6,8 +6,8 @@
 <p>PublicGuid: <%= user.PublicGuid %></p>
 <p>AccessToken (user): <%= token %></p>
 
-<p>AccessToken: <%= oauth.token %></p>
-<p>TokenSecret: <%= oauth.tokenSecret %></p>
+<p>AccessToken: <%= api.oauth_token %></p>
+<p>TokenSecret: <%= api.oauth_token_secret %></p>
 
 
 
