--- a/generator/tpl/objects.ejs
+++ b/generator/tpl/objects.ejs
@@ -5,7 +5,7 @@
 //
 export interface <%= o.interfaceName %> {
 <% o.params.forEach(function(param){ %>
-  // <%= param.description %> - <% if (param.nullable) { %> Nullable<% } %> <% if (param.deprecated) { %> Deprecated<% } %>
+  // <%= param.description %><% if (param.nullable) { %> (Nullable)<% } %><% if (param.deprecated) { %> (Deprecated)<% } %>
   <%= param.name %>: <%= param.type %>;<% }); %>
 }
 
